[gd_scene load_steps=3 format=3 uid="uid://525ggaunp1sp"]

[ext_resource type="Script" path="res://Scripts/options.gd" id="1_xm0b3"]
[ext_resource type="Script" path="res://Scripts/audio_options.gd" id="2_beedd"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xm0b3")

[node name="Audio Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -580.0
offset_top = -332.5
offset_right = 580.0
offset_bottom = 332.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_beedd")

[node name="VBoxContainer" type="VBoxContainer" parent="Audio Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -144.5
offset_right = 400.0
offset_bottom = 144.5
grow_horizontal = 2
grow_vertical = 2

[node name="MasterLabel" type="Label" parent="Audio Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Audio Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="Audio Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Audio Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="MusicLabel" type="Label" parent="Audio Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Audio Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="Confirm" type="Button" parent="Audio Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.873276
anchor_top = 0.82782
anchor_right = 0.934483
anchor_bottom = 0.874436
grow_horizontal = 0
grow_vertical = 0
text = "Confirm"
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="Audio Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0755208
anchor_top = 0.83642
anchor_right = 0.114583
anchor_bottom = 0.884259
offset_left = 3.39583
offset_top = -5.71912
offset_right = 3.39583
offset_bottom = -5.71912
grow_vertical = 0
text = "Back"
metadata/_edit_use_anchors_ = true

[connection signal="mouse_exited" from="Audio Options/VBoxContainer/MasterSlider" to="Audio Options" method="_on_master_slider_mouse_exited"]
[connection signal="mouse_exited" from="Audio Options/VBoxContainer/SFXSlider" to="Audio Options" method="_on_sfx_slider_mouse_exited"]
[connection signal="mouse_exited" from="Audio Options/VBoxContainer/MusicSlider" to="Audio Options" method="_on_music_slider_mouse_exited"]
[connection signal="pressed" from="Audio Options/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Audio Options/Back" to="." method="_on_back_pressed"]
